Allow access to 'this' in expressions / support introspections

--- a/src/main/docs/guide/config/evaluatedExpressions.adoc
+++ b/src/main/docs/guide/config/evaluatedExpressions.adoc
@@ -48,7 +48,7 @@ Expressions can be used anywhere throughout the Micronaut framework and associat
 snippet::io.micronaut.docs.expressions.ExampleJob[title="Job Control with Expressions"]
 
 <1> Here the `condition` member of the ann:scheduling.annotation.Scheduled[] annotation is used to only execute the job if a pre-condition is met.
-<2> The `condition` invokes a method of a parameter which is another bean called `ExampleJobControl` which can be used to pause and resume execution of the job as desired.
+<2> The `condition` invokes a method of the type that checks if the job is paused. Other methods can be used to pause and resume execution of the job as desired.
 
 TIP: You can also use expressions to perform conditional routing using the ann:http.annotation.RouteCondition[] annotation.
 
