--- a/src/main/docs/guide/appendix/breaks.adoc
+++ b/src/main/docs/guide/appendix/breaks.adoc
@@ -128,3 +128,35 @@ Interceptors with multiple interceptor bindings annotations now require the same
 
 New type converters can be added to api:core.convert.MutableConversionService[] retrieved from the bean context or by declaring a bean of type api:core.convert.TypeConverter[].
 To register a type converter into `ConversionService.SHARED`, the registration needs to be done via the service loader.
+
+==== `ExceptionHandler` with POJO response type no longer results in an exception
+
+Previously if you had an ExceptionHandler such as:
+
+[source,java]
+----
+@Singleton
+public class MyExceptionHandler implements ExceptionHandler<MyException, String> {
+
+    @Override
+    public String handle(HttpRequest request, MyException exception) {
+        return "caught!";
+    }
+}
+----
+
+This would result in an internal server error response with `caught!` as the body.
+This now returns an OK response.
+If you want to return a POJO response as an error, you should use the `HttpResponse` type:
+
+[source,java]
+----
+@Singleton
+public class MyExceptionHandler implements ExceptionHandler<MyException, HttpResponse<String>> {
+
+    @Override
+    public HttpResponse<String> handle(HttpRequest request, MyException exception) {
+        return HttpResponse.badRequest("caught!");
+    }
+}
+----
