--- a/src/main/docs/guide/config/evaluatedExpressions.adoc
+++ b/src/main/docs/guide/config/evaluatedExpressions.adoc
@@ -10,6 +10,8 @@ double injectedValue;
 
 Expressions can be defined whenever an annotation member accepts a string or an array of strings.
 
+NOTE: Expressions are currently not supported for "type use" annotations (annotations that declare `ElementType.TYPE_USE`).
+
 .Evaluated Expression in array
 [source,java]
 ----
